--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+:root {
+  --yellow: #FFF011;
+  --dark: #031533;
+  --white: #E9EAED;
+
+  --tooltip-text-color: #E9EAED;
+  --tooltip-background-color: #031533;
+  --tooltip-margin: 20px;
+  --tooltip-arrow-size: 6px;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: bold;
 }
 
 code {
