--- a/frontend/src/components/Category/index.module.css
+++ b/frontend/src/components/Category/index.module.css
@@ -4,6 +4,12 @@
   transition: .2s;
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+
+.name {
+  opacity: 1;
+  transition: .2s;
 }
 
 .container:hover {
@@ -28,4 +34,15 @@
 
 .container:hover .button {
   opacity: 1;
+}
+
+.container:hover .name {
+  opacity: 0;
+}
+
+.actions {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
